# agentic-kie

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  langgraph.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  integration.yml
examples/agent/: image-only.py  text-only.py
examples/graph/: graph.py
examples/single-pass/: image-only.py  text-only.py
notebooks/: document.ipynb  eda.ipynb  reader.ipynb
src/agentic_kie/: __init__.py  document.py  exceptions.py  loader.py  main.py  ocr.py  prompts.py  reader.py  tools.py
src/agentic_kie/examples/: single-pass.py
src/agentic_kie/examples/agent/: image-only.py  text-only.py
src/agentic_kie/examples/graph/: graph.py
src/agentic_kie/examples/single-pass/: image-only.py  multimodal.py  text-only.py
src/agentic_kie/extractors/: __init__.py  agent.py  base.py  single_pass.py
tests/: conftest.py  test_document.py  test_loader.py  test_package.py  test_prompts.py  test_reader.py  test_tools.py
tests/extractors/: test_agent.py  test_base.py  test_single_pass.py
tests/integration/: conftest.py  schema.py  test_extraction.py
