[project]
name = "agentic-kie"
dynamic = ["version"]
description = "Agentic and single-pass Key Information Extraction (KIE) from documents using LLMs"
readme = "README.md"
authors = [
    { name = "Gabriel Fuentes", email = "gafnts@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
]

[project.optional-dependencies]
all = [
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
]
anthropic = [
    "langchain-anthropic>=1.4.0",
]
bedrock = [
    "langchain-community>=0.4.1",
]
google = [
    "langchain-google-genai>=4.2.1",
]
openai = [
    "langchain-openai>=1.1.12",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.2",
]
eda = [
    "altair>=6.0.0",
    "nda>=0.2.0",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "tiktoken>=0.12.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
link-mode = "copy"

[tool.uv.sources]
nda = { git = "https://github.com/gafnts/kleister-nda-preparation.git" }

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_kie"]
exclude = ["src/agentic_kie/examples"]

[tool.ruff]
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "G", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
mypy_path = "src"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_any_expr = false

[[tool.mypy.overrides]]
module = [
    "agentic_kie.examples.*",
    "agentic_kie.examples.*.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "nda"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/agentic_kie/exceptions.py",
]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
