[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "agentic-kie"
description = "Agentic and single-pass Key Information Extraction (KIE) from documents using LLMs"
readme = "README.md"
authors = [ { name = "Gabriel Fuentes", email = "gafnts@gmail.com" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "langchain>=1.2.10",
  "pydantic>=2.12.5",
  "pymupdf>=1.27.2.2",
]
optional-dependencies.all = [
  "langchain-anthropic>=1.4",
  "langchain-community>=0.4.1",
  "langchain-google-genai>=4.2.1",
  "langchain-openai>=1.1.12",
]
optional-dependencies.anthropic = [
  "langchain-anthropic>=1.4",
]
optional-dependencies.bedrock = [
  "langchain-community>=0.4.1",
]
optional-dependencies.google = [
  "langchain-google-genai>=4.2.1",
]
optional-dependencies.openai = [
  "langchain-openai>=1.1.12",
]

[dependency-groups]
dev = [
  "ipykernel>=7.2",
  "langgraph-api>=0.7.94",
  "langgraph-cli[inmem]>=0.4.19",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pyproject-fmt>=2.21",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-timeout>=2.4",
  "python-dotenv>=1.2.2",
  "ruff>=0.15.4",
]
nda = [
  "nda",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/agentic_kie" ]
version.source = "vcs"

[tool.uv]
sources.nda = { git = "https://github.com/gafnts/kleister-nda-preparation.git" }

[tool.ruff]
target-version = "py313"
src = [ "src" ]
lint.select = [ "B", "E4", "E7", "E9", "F", "G", "I", "N", "SIM", "UP" ]

[tool.mypy]
mypy_path = "src"
files = [ "src", "tests" ]
plugins = [ "pydantic.mypy" ]
strict = true
overrides = [
  { module = "tests.*", disallow_untyped_defs = false, disallow_any_expr = false },
  { module = "nda", ignore_missing_imports = true },
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.pythonpath = [ "src" ]
ini_options.markers = [
  "integration: requires API keys and network access (deselected by default)",
]
ini_options.addopts = "-m 'not integration'"
ini_options.timeout = 120
ini_options.filterwarnings = [
  "ignore::DeprecationWarning:importlib._bootstrap",
]

[tool.coverage]
run.branch = true
run.omit = [
  "src/agentic_kie/exceptions.py",
]
run.source = [ "src" ]
report.fail_under = 95
report.show_missing = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
